--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "scripts": {
     "demo": "http-server . -c-1 --cors -o"
   },
+  "dependencies": {
+    "jquery": "3.0.0"
+  },
   "devDependencies": {
     "http-server": "0.11.1"
   }
