--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "scripts": {
-    "demo": "http-server . -c-1 --cors -o"
-  },
-  "dependencies": {
-    "jquery": "3.0.0"
-  },
-  "devDependencies": {
-    "http-server": "0.11.1"
-  }
+    "scripts": {
+        "start": "http-server . -c-1 --cors -o"
+    },
+    "dependencies": {
+        "jquery": "3.0.0"
+    },
+    "devDependencies": {
+        "http-server": "0.11.1"
+    }
 }
